# ActGuard

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  code-review.yml
app/: __init__.py  approvals.py  audit_log.py  database.py  main.py  models.py  policy_engine.py  security.py  sequence_detector.py
config/: policies.yaml
scripts/: demo_agent.py  seed_demo_data.py
static/: index.html
tests/: test_api.py  test_policy_engine.py  test_seed_demo_data.py  test_sequence_detector.py
